fix: horizontal scroll

--- a/src/components/header/Header.scss
+++ b/src/components/header/Header.scss
@@ -2,6 +2,7 @@
       display: flex;
       flex-direction: column;
       min-height: 180px;
+      box-sizing: border-box;
   }
   .header__toolbar {
     display: flex;
